kanc/src/tests/sample_code/should_fail/single_file/variant_return_type/foreign_non_nullary_type.k
type U {
    u: U,
}

type T(x: U) {
    t: T(U.u),
}

type Foo {
    t: T(U.u),
}
